PyParser.py
# Generated from PyParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PyParser ( Parser ):

    grammarFileName = "PyParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'['", "']'", 
                     "'('", "')'", "','", "'.'", "':'", "'#'", "'if'", "'elif'", 
                     "'else'", "'for'", "'while'", "'range'", "'in'", "'not'", 
                     "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "WS", "NEWLINE", "TAB", "ASSIGNMENT", 
                      "OPERATOR", "CONDITION", "LBRA", "RBRA", "LPAR", "RPAR", 
                      "COMMA", "PERIOD", "COLON", "POUND", "IF", "ELIF", 
                      "ELSE", "FOR", "WHILE", "RANGE", "IN", "NOT", "AND", 
                      "OR", "INT", "BOOL", "TICK3", "COMMENT", "ID", "CHAR", 
                      "STRING", "BC" ]

    RULE_program = 0
    RULE_block = 1
    RULE_iblock = 2
    RULE_statement = 3
    RULE_assignment = 4
    RULE_if = 5
    RULE_elif = 6
    RULE_else = 7
    RULE_while = 8
    RULE_for = 9
    RULE_iterable = 10
    RULE_bexpr = 11
    RULE_logic_op = 12
    RULE_lvalue = 13
    RULE_rvalue = 14
    RULE_list = 15
    RULE_expr = 16
    RULE_value = 17
    RULE_literal = 18
    RULE_number = 19
    RULE_float = 20
    RULE_comment = 21

    ruleNames =  [ "program", "block", "iblock", "statement", "assignment", 
                   "if", "elif", "else", "while", "for", "iterable", "bexpr", 
                   "logic_op", "lvalue", "rvalue", "list", "expr", "value", 
                   "literal", "number", "float", "comment" ]

    EOF = Token.EOF
    WS=1
    NEWLINE=2
    TAB=3
    ASSIGNMENT=4
    OPERATOR=5
    CONDITION=6
    LBRA=7
    RBRA=8
    LPAR=9
    RPAR=10
    COMMA=11
    PERIOD=12
    COLON=13
    POUND=14
    IF=15
    ELIF=16
    ELSE=17
    FOR=18
    WHILE=19
    RANGE=20
    IN=21
    NOT=22
    AND=23
    OR=24
    INT=25
    BOOL=26
    TICK3=27
    COMMENT=28
    ID=29
    CHAR=30
    STRING=31
    BC=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(PyParser.BlockContext,0)


        def EOF(self):
            return self.getToken(PyParser.EOF, 0)

        def getRuleIndex(self):
            return PyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.block()
            self.state = 45
            self.match(PyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyParser.StatementContext)
            else:
                return self.getTypedRuleContext(PyParser.StatementContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyParser.CommentContext)
            else:
                return self.getTypedRuleContext(PyParser.CommentContext,i)


        def TAB(self, i:int=None):
            if i is None:
                return self.getTokens(PyParser.TAB)
            else:
                return self.getToken(PyParser.TAB, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PyParser.NEWLINE)
            else:
                return self.getToken(PyParser.NEWLINE, i)

        def getRuleIndex(self):
            return PyParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = PyParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 5101092864) != 0):
                self.state = 49 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 49
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [15, 18, 19, 29]:
                            self.state = 47
                            self.statement()
                            pass
                        elif token in [28, 32]:
                            self.state = 48
                            self.comment()
                            pass
                        else:
                            raise NoViableAltException(self)


                    else:
                        raise NoViableAltException(self)
                    self.state = 51 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 53
                    self.match(PyParser.TAB)
                    self.state = 58
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 59
                    self.match(PyParser.NEWLINE)
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAB(self, i:int=None):
            if i is None:
                return self.getTokens(PyParser.TAB)
            else:
                return self.getToken(PyParser.TAB, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyParser.StatementContext)
            else:
                return self.getTypedRuleContext(PyParser.StatementContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyParser.CommentContext)
            else:
                return self.getTypedRuleContext(PyParser.CommentContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PyParser.NEWLINE)
            else:
                return self.getToken(PyParser.NEWLINE, i)

        def getRuleIndex(self):
            return PyParser.RULE_iblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIblock" ):
                listener.enterIblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIblock" ):
                listener.exitIblock(self)




    def iblock(self):

        localctx = PyParser.IblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_iblock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 70
                    self.match(PyParser.TAB)
                    self.state = 73 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 73
                            self._errHandler.sync(self)
                            token = self._input.LA(1)
                            if token in [15, 18, 19, 29]:
                                self.state = 71
                                self.statement()
                                pass
                            elif token in [28, 32]:
                                self.state = 72
                                self.comment()
                                pass
                            else:
                                raise NoViableAltException(self)


                        else:
                            raise NoViableAltException(self)
                        self.state = 75 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                    self.state = 80
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 77
                            self.match(PyParser.TAB) 
                        self.state = 82
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                    self.state = 86
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 83
                            self.match(PyParser.NEWLINE) 
                        self.state = 88
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
             
                self.state = 93
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(PyParser.AssignmentContext,0)


        def if_(self):
            return self.getTypedRuleContext(PyParser.IfContext,0)


        def while_(self):
            return self.getTypedRuleContext(PyParser.WhileContext,0)


        def for_(self):
            return self.getTypedRuleContext(PyParser.ForContext,0)


        def getRuleIndex(self):
            return PyParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.assignment()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.if_()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.while_()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                self.for_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(PyParser.LvalueContext,0)


        def ASSIGNMENT(self):
            return self.getToken(PyParser.ASSIGNMENT, 0)

        def rvalue(self):
            return self.getTypedRuleContext(PyParser.RvalueContext,0)


        def getRuleIndex(self):
            return PyParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = PyParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.lvalue()
            self.state = 101
            self.match(PyParser.ASSIGNMENT)
            self.state = 102
            self.rvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PyParser.IF, 0)

        def bexpr(self):
            return self.getTypedRuleContext(PyParser.BexprContext,0)


        def COLON(self):
            return self.getToken(PyParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PyParser.NEWLINE, 0)

        def iblock(self):
            return self.getTypedRuleContext(PyParser.IblockContext,0)


        def elif_(self):
            return self.getTypedRuleContext(PyParser.ElifContext,0)


        def else_(self):
            return self.getTypedRuleContext(PyParser.ElseContext,0)


        def getRuleIndex(self):
            return PyParser.RULE_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)




    def if_(self):

        localctx = PyParser.IfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(PyParser.IF)
            self.state = 105
            self.bexpr(0)
            self.state = 106
            self.match(PyParser.COLON)
            self.state = 107
            self.match(PyParser.NEWLINE)
            self.state = 108
            self.iblock()
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 109
                self.elif_()

            elif la_ == 2:
                self.state = 110
                self.else_()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(PyParser.ELIF, 0)

        def bexpr(self):
            return self.getTypedRuleContext(PyParser.BexprContext,0)


        def COLON(self):
            return self.getToken(PyParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PyParser.NEWLINE, 0)

        def iblock(self):
            return self.getTypedRuleContext(PyParser.IblockContext,0)


        def elif_(self):
            return self.getTypedRuleContext(PyParser.ElifContext,0)


        def else_(self):
            return self.getTypedRuleContext(PyParser.ElseContext,0)


        def getRuleIndex(self):
            return PyParser.RULE_elif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElif" ):
                listener.enterElif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElif" ):
                listener.exitElif(self)




    def elif_(self):

        localctx = PyParser.ElifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elif)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(PyParser.ELIF)
            self.state = 114
            self.bexpr(0)
            self.state = 115
            self.match(PyParser.COLON)
            self.state = 116
            self.match(PyParser.NEWLINE)
            self.state = 117
            self.iblock()
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 118
                self.elif_()

            elif la_ == 2:
                self.state = 119
                self.else_()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(PyParser.ELSE, 0)

        def COLON(self):
            return self.getToken(PyParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PyParser.NEWLINE, 0)

        def iblock(self):
            return self.getTypedRuleContext(PyParser.IblockContext,0)


        def getRuleIndex(self):
            return PyParser.RULE_else

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse" ):
                listener.enterElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse" ):
                listener.exitElse(self)




    def else_(self):

        localctx = PyParser.ElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_else)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(PyParser.ELSE)
            self.state = 123
            self.match(PyParser.COLON)
            self.state = 124
            self.match(PyParser.NEWLINE)
            self.state = 125
            self.iblock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PyParser.WHILE, 0)

        def bexpr(self):
            return self.getTypedRuleContext(PyParser.BexprContext,0)


        def COLON(self):
            return self.getToken(PyParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PyParser.NEWLINE, 0)

        def iblock(self):
            return self.getTypedRuleContext(PyParser.IblockContext,0)


        def getRuleIndex(self):
            return PyParser.RULE_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)




    def while_(self):

        localctx = PyParser.WhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(PyParser.WHILE)
            self.state = 128
            self.bexpr(0)
            self.state = 129
            self.match(PyParser.COLON)
            self.state = 130
            self.match(PyParser.NEWLINE)
            self.state = 131
            self.iblock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PyParser.FOR, 0)

        def lvalue(self):
            return self.getTypedRuleContext(PyParser.LvalueContext,0)


        def IN(self):
            return self.getToken(PyParser.IN, 0)

        def iterable(self):
            return self.getTypedRuleContext(PyParser.IterableContext,0)


        def COLON(self):
            return self.getToken(PyParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PyParser.NEWLINE, 0)

        def iblock(self):
            return self.getTypedRuleContext(PyParser.IblockContext,0)


        def getRuleIndex(self):
            return PyParser.RULE_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)




    def for_(self):

        localctx = PyParser.ForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_for)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(PyParser.FOR)
            self.state = 134
            self.lvalue()
            self.state = 135
            self.match(PyParser.IN)
            self.state = 136
            self.iterable()
            self.state = 137
            self.match(PyParser.COLON)
            self.state = 138
            self.match(PyParser.NEWLINE)
            self.state = 139
            self.iblock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(PyParser.LvalueContext,0)


        def RANGE(self):
            return self.getToken(PyParser.RANGE, 0)

        def LPAR(self):
            return self.getToken(PyParser.LPAR, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(PyParser.INT)
            else:
                return self.getToken(PyParser.INT, i)

        def COMMA(self):
            return self.getToken(PyParser.COMMA, 0)

        def RPAR(self):
            return self.getToken(PyParser.RPAR, 0)

        def getRuleIndex(self):
            return PyParser.RULE_iterable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterable" ):
                listener.enterIterable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterable" ):
                listener.exitIterable(self)




    def iterable(self):

        localctx = PyParser.IterableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_iterable)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.lvalue()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(PyParser.RANGE)
                self.state = 143
                self.match(PyParser.LPAR)
                self.state = 144
                self.match(PyParser.INT)
                self.state = 145
                self.match(PyParser.COMMA)
                self.state = 146
                self.match(PyParser.INT)
                self.state = 147
                self.match(PyParser.RPAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(PyParser.LPAR, 0)

        def bexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyParser.BexprContext)
            else:
                return self.getTypedRuleContext(PyParser.BexprContext,i)


        def RPAR(self):
            return self.getToken(PyParser.RPAR, 0)

        def NOT(self):
            return self.getToken(PyParser.NOT, 0)

        def value(self):
            return self.getTypedRuleContext(PyParser.ValueContext,0)


        def logic_op(self):
            return self.getTypedRuleContext(PyParser.Logic_opContext,0)


        def getRuleIndex(self):
            return PyParser.RULE_bexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBexpr" ):
                listener.enterBexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBexpr" ):
                listener.exitBexpr(self)



    def bexpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PyParser.BexprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_bexpr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.state = 151
                self.match(PyParser.LPAR)
                self.state = 152
                self.bexpr(0)
                self.state = 153
                self.match(PyParser.RPAR)
                pass
            elif token in [22]:
                self.state = 155
                self.match(PyParser.NOT)
                self.state = 156
                self.bexpr(2)
                pass
            elif token in [25, 26, 29, 30, 31]:
                self.state = 157
                self.value()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 166
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PyParser.BexprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_bexpr)
                    self.state = 160
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 161
                    self.logic_op()
                    self.state = 162
                    self.bexpr(5) 
                self.state = 168
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Logic_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OR(self):
            return self.getToken(PyParser.OR, 0)

        def AND(self):
            return self.getToken(PyParser.AND, 0)

        def CONDITION(self):
            return self.getToken(PyParser.CONDITION, 0)

        def getRuleIndex(self):
            return PyParser.RULE_logic_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_op" ):
                listener.enterLogic_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_op" ):
                listener.exitLogic_op(self)




    def logic_op(self):

        localctx = PyParser.Logic_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_logic_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 25165888) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PyParser.ID, 0)

        def getRuleIndex(self):
            return PyParser.RULE_lvalue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLvalue" ):
                listener.enterLvalue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLvalue" ):
                listener.exitLvalue(self)




    def lvalue(self):

        localctx = PyParser.LvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_lvalue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(PyParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(PyParser.ValueContext,0)


        def expr(self):
            return self.getTypedRuleContext(PyParser.ExprContext,0)


        def list_(self):
            return self.getTypedRuleContext(PyParser.ListContext,0)


        def getRuleIndex(self):
            return PyParser.RULE_rvalue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRvalue" ):
                listener.enterRvalue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRvalue" ):
                listener.exitRvalue(self)




    def rvalue(self):

        localctx = PyParser.RvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_rvalue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 173
                self.value()
                pass

            elif la_ == 2:
                self.state = 174
                self.expr(0)
                pass

            elif la_ == 3:
                self.state = 175
                self.list_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRA(self):
            return self.getToken(PyParser.LBRA, 0)

        def rvalue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyParser.RvalueContext)
            else:
                return self.getTypedRuleContext(PyParser.RvalueContext,i)


        def RBRA(self):
            return self.getToken(PyParser.RBRA, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PyParser.COMMA)
            else:
                return self.getToken(PyParser.COMMA, i)

        def getRuleIndex(self):
            return PyParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)
